# Aladdin-Game

./: CMakeLists.txt  README.md
include/: Aladdin.h  Animation.h  AnimationData.h  Apple.h  AppleWeapon.h  BaseLine.h  CMakeLists.txt  CameraView.h  CollisionHandling.h  Controller.h  Direction.h  DistantEnemy.h  EndLevel.h  Enemy.h  Floor.h  GameObject.h  Genie.h  HighScoreBoard.h  JugglingEnemy.h  KnifeWeapon.h  LivesGift.h  Media.h  Menu.h  Movables.h  NearEnemy.h  ObjectsToCollect.h  Rope.h  Ruby.h  ScoreBoard.h  Unmovables.h  Wall.h  Weapon.h  World.h  macros.h
resources/: CMakeLists.txt
resources/font-resources/: CMakeLists.txt
resources/png-resources/: CMakeLists.txt
resources/sound-resources/: CMakeLists.txt
resources/txt-resources/: Aladdin-Animations.txt  Aladdin.txt  AppleItem.txt  AppleWeapon.txt  CMakeLists.txt  DistantEnemy.txt  EndGame.txt  Genie.txt  KnifeWeapon.txt  LivesGift.txt  NearEnemy.txt  Ruby.txt  StaticEnemy.txt  high_score_table.txt  worldObjectsPos.txt
src/: Aladdin.cpp  Animation.cpp  Apple.cpp  AppleWeapon.cpp  BaseLine.cpp  CMakeLists.txt  CameraView.cpp  CollisionHandling.cpp  Controller.cpp  Direction.cpp  DistantEnemy.cpp  EndLevel.cpp  Enemy.cpp  GameObject.cpp  Genie.cpp  HighScoreBoard.cpp  JugglingEnemy.cpp  KnifeWeapon.cpp  LivesGift.cpp  Media.cpp  Menu.cpp  Movables.cpp  NearEnemy.cpp  ObjectsToCollect.cpp  Rope.cpp  Ruby.cpp  ScoreBoard.cpp  Unmovables.cpp  Weapon.cpp  World.cpp  main.cpp
